[package]
name = "pkcs11-uri"
version = "0.1.0"
authors = ["Nicolas Stalder <n@stalder.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
log = "0.4.11"
percent-encoding = "2.1.0"
pkcs11 = "0.5.0"
uriparse = { git = "https://github.com/nickray/uriparse-rs", branch = "pkcs11-typo" }

[dev-dependencies]
serial_test = "0.5.1"
simplelog = "0.9.0"
