[package]
name = "pkcs11-uri"
version = "0.1.2"
authors = ["Nicolas Stalder <n@stalder.io>"]
edition = "2018"
description = "PKCS #11 URI parser"
readme = "README.md"
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/pkcs11-uri"
keywords = ["pkcs11", "cryptoki", "cryptography", "signatures", "hsm"]
categories = ["cryptography", "hardware-support"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
log = "0.4.11"
percent-encoding = "2.1.0"
pkcs11 = "0.5.0"
uriparse = "0.6.4"
# uriparse = { git = "https://github.com/sgodwincs/uriparse-rs", rev = "82de33ab5685c71810e61ba376cc637f26f2f182" }

[dev-dependencies]
delog = "0.1.0-alpha.3"
rsa = "0.3.0"
sha2 = "0.9.2"
serial_test = "0.5.1"
simplelog = "0.9.0"
